test: update subscription and notification service tests to include target type handling